antlr/State.g4
grammar State;

stateFile
  : (enum_type_decl)* (const_var_decl)* (array_decl)* (typedef_decl)* (var_decl)+ EOF
  ;

enum_type_decl
  : ENUM ID LCURLY id_set RCURLY
  ;

id_set
  : (ID)+
  ;

const_var_decl
  : CONST ID COLON type
  ;

var_decl
  : VAR ID COLON type (LCURLY id_set RCURLY)?
  ;

var_set
  : (var_decl)+
  ;

array_decl
  : ARRAY ID LBRACKET ID RBRACKET COLON primitive_type
  ;

array_decl_set
  : (array_decl)*
  ;

typedef_decl
  : TYPEDEF ID LCURLY array_decl_set var_set typedef_decl_set RCURLY
  ;

typedef_decl_set
  : (typedef_decl)*
  ;

type
  : primitive_type
  | TYPEDEF
  | ID
  ;

primitive_type
  : BIT
  | BOOL
  | BYTE
  | INT
  | SHORT
  ;

// ---------------------------------------------------------------------------
// Lexer Rules
// ---------------------------------------------------------------------------

COLON
  : ':'
  ;

BIT
  : 'bit'
  ;

BOOL
  : 'bool'
  ;

BYTE
  : 'byte'
  ;

CONST
  : 'const'
  ;

ENUM
  : 'enum'
  ;

INT
  : 'int'
  ;

SHORT
  : 'short'
  ;

EQUALS
  : '='
  ;

LCURLY
  : '{'
  ;

RCURLY
  : '}'
  ;

LBRACKET
  : '['
  ;

RBRACKET
  : ']'
  ;

VAR
  : 'var'
  ;

ARRAY
  : 'array'
  ;

TYPEDEF
  : 'typedef'
  ;

ID
  : [a-zA-Z0-9_]+
  ;

WS : [ \t\n\r]+ -> skip ;
